# Spinal-Interneuron-Analysis

./: .gitignore  README.md  analysis_association_rules.sh  analysis_clusterability.R  analysis_loops.sh  convert_data.py  plot_association_rules.py  plot_clusterability.py  plot_latencies.py  plot_loops.py  plot_style.py  plot_weights.py  reduce_data.py
analysis_core/: .gitignore  CMakeLists.txt  frequency_counter.h  main.cpp  plotAssociationRules.R  remove_cmake.sh  swap_statistics.h
data_synaptology/: Synaptology.csv  Synaptology_HQ.csv  Synaptology_HQ.xlsx  Synaptology_HQ_tidy.csv  Synaptology_tidy.csv  Synaptology_tidy_reduced.csv
illustration_swap_randomization/: Illustration_Data.csv  plot_binary_data.py  swapped_01.csv  swapped_02.csv  swapped_03.csv  swapped_04.csv  swapped_05.csv  swapped_06.csv  swapped_07.csv  swapped_08.csv  swapped_09.csv  swapped_10.csv
results_association_rules/: AssociationRules.csv
results_clusterability/: GapStat_Result.csv  SigClust_Result_1.csv  SigClust_Result_2.csv
results_loops/: ExEx.csv  ExIn.csv  FF.csv  InIn.csv
